Code Sequencer Tutorial

--- a/index.html
+++ b/index.html
@@ -13,6 +13,45 @@
   <body>
     <h1>content!</h1>
     <button id="test-button">tone tester</button>
+    <div class="drumkit">
+      <button id="kick">Kick</button>
+      <button id="snare">snare</button>
+      <button id="hihat">hihat</button>
+    </div>
+
+    <div id="basicSequencer">
+      <div>
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </div>
+      <div>
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </div>
+      <div>
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </div>
+    </div>
+
   </body>
 
 </html>
