Add play and pause button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <button id="snare">snare</button>
       <button id="hihat">hihat</button>
     </div>
+    <button id="play-pause">Play</button>
 
     <div id="basicSequencer">
       <div>
