Create parentSequencer class

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <button id="hihat">hihat</button>
     </div>
     <button id="play-pause">Play</button>
+    <div id="test-grid"></div>
 
-    <div id="basicSequencer">
+    <!-- <div id="basicSequencer">
       <div>
         <input type="checkbox">
         <input type="checkbox">
@@ -51,7 +52,7 @@
         <input type="checkbox">
         <input type="checkbox">
       </div>
-    </div>
+    </div> -->
 
   </body>
 
