Parent sequencer render

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
       <button id="snare">snare</button>
       <button id="hihat">hihat</button>
     </div>
+
+
     <button id="play-pause">Play</button>
-    <div id="test-grid"></div>
+
+
+
+    <div id="test-grid">
+
+    </div>
+
+    <div id="test-2"></div>
 
     <!-- <div id="basicSequencer">
       <div>
