Minor CSS styling and volume control

--- a/index.html
+++ b/index.html
@@ -21,49 +21,20 @@
 
 
     <button id="play-pause">Play</button>
+    <button id="volume-button">mute</button>
 
-
-
-    <div id="test-grid">
-
+<div id="synth-container">
+  <div id="synth-controls"></div>
+  <div id="clear"></div>
+  <div id="test-grid">
     </div>
-  
+    
+</div>
 
-    <div id="test-2"></div>
-
-    <!-- <div id="basicSequencer">
-      <div>
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-      </div>
-      <div>
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-      </div>
-      <div>
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-        <input type="checkbox">
-      </div>
-    </div> -->
-
+    
+<label><div class="font-control">volume</div>
+  <input type="range" min="-20" max="1" step="1" value="-6" id="volume-slider">
+</label>
   </body>
 
 </html>
