--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 
   <body>
     <h1>4 block loop!</h1>
-    <button id="test-button">tone tester</button>
+   
    
 
-
-<div id="drumkit">
+<h2>drums</h2>
+<div class = "container" id="drumkit">
   <div class= "controls" id="drum-controls"></div>
   <div id="drum-clear"></div>
   <div class="grid" id="drums-grid"></div>
   
 </div>
     
-
+<br>
+<h2>bass</h2>
 <div class="container" id="synth-container">
   <div class= "controls" id="synth-controls"></div>
   <div id="synth-clear"></div>
@@ -31,9 +32,10 @@
   </div>
     
 </div>
-
+<br>
     <button id="play-pause">Play</button>
     <button id="volume-button">mute</button>
+
 <label><div>volume</div>
   <input type="range" min="-20" max="1" step="1" value="-6" id="volume-slider">
 </label>
