Css reset and Keyboard visual

--- a/index.html
+++ b/index.html
@@ -44,6 +44,58 @@
   <input type="range" min="60" max="180" step="1" value="120" id="bpm-slider">
 </label>
 
+
+
+<div class="keyboard">
+  
+  <ul class="keyboard-row">
+    <li class="large keyboard-node" id="tab">TAB</li>
+    <li class="keyboard-node" id="q">Q</li>
+    <li class="keyboard-node" id="w">W</li>
+    <li class="root keyboard-node" id="e">E</li>
+    <li class="keyboard-node" id="r">R</li>
+    <li class="keyboard-node" id="t">T</li>
+    <li class="keyboard-node" id="y">Y</li>
+    <li class="keyboard-node" id="u">U</li>
+    <li class="keyboard-node" id="i">I</li>
+    <li class="keyboard-node" id="o">O</li>
+    <li class="root keyboard-node" id="p">P</li>
+    <li class="keyboard-node" >[</li>
+    <li class="keyboard-node" >]</li>
+    <li class="keyboard-node" >\</li>
+  </ul>
+  <ul class="keyboard-row">
+    <li class="larger keyboard-node" id="caps">CAPS</li>
+    <li class="keyboard-node" id="a">A</li>
+    <li class="keyboard-node" id="s">S</li>
+    <li class="keyboard-node" id="d">D</li>
+    <li class="keyboard-node" id="f">F</li>
+    <li class="keyboard-node" id="g">G</li>
+    <li class="root keyboard-node" id="h">H</li>
+    <li class="keyboard-node" id="j">J</li>
+    <li class="keyboard-node" id="k">K</li>
+    <li class="keyboard-node" id="l">L</li>
+    <li class="keyboard-node" id=";">;</li>
+    <li class="keyboard-node" id="'">'</li>
+    <li class="larger keyboard-node" id="enter">ENTER</li>
+  </ul>
+  <ul class="keyboard-row">
+    <li class="largest keyboard-node" id="left-shift">SHIFT</li>
+    <li class="keyboard-node" id="z">Z</li>
+    <li class="root keyboard-node" id="x">X</li>
+    <li class="keyboard-node" id="c">C</li>
+    <li class="keyboard-node" id="v">V</li>
+    <li class="keyboard-node" id="b">B</li>
+    <li class="keyboard-node" id="n">N</li>
+    <li class="keyboard-node" id="m">M</li>
+    <li class="keyboard-node" id=",">,</li>
+    <li class="root keyboard-node" id=".">.</li>
+    <li class="keyboard-node" id="/">/</li>
+    <li class="largest keyboard-node" id="right-shift">SHIFT</li>
+  </ul>
+</div>
+
+
   </body>
 
 </html>
