--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
     <title>4 Block Loop</title>
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> 
+    
    </head>
 
   <body>
     <header>
-      <h1>4 block loop!</h1>
-
+      <h1>4 Block Loop</h1>
+      <a href="https://github.com/Kernapillar">
+        <img id="social-link"  src="/github logo.png" alt="github link">
+      </a>
     </header>
    
 
