Wrote instructions page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,37 @@
       <a href="https://github.com/Kernapillar">
         <img id="social-link"  src="/github logo.png" alt="github link">
       </a>
+      <button>instructions</button>
     </header>
    
+    <div id="instructions">
+      <h1>Instructions!</h1>
+      
+      Welcome to 4 Block Loop! This is a small, self contained music making webpage. 
+      There are 4 main music making blocks on the page, 3 sequencers (Drums, Bass and Chords) as well as a
+      piano that you can play using your computer keyboard. Each tool has its own color, play around with each one, add some color to the page, and make some music!
+      <br>
+
+      <h2>Sequencers:</h2>
+      Each of the three sequencers are layed out 4 in grids of 4 nodes, each node representing 1 beat while each grouping of 4 represents 1 measure (the chords sequencer has nodes that are 1 measure each). When you click on a sequencer node, it will become selected and change color. When you press play, the sequencers will scan across the grid from left to right, playing each active node's sound as it passes. 
+      The sequencer will continue looping across the grid and playing notes until you press pause. 
+      <br>
+      To add a bit of complexity, you can turn on the "Extended Mode" button at the bottom of the page. 
+      While active, the Extended Mode will add a "1" or "2" to nodes that you activate. these marked nodes will play their sounds every other loop, nodes with a "1" will play on the first loop, and every other loop afterwards,  and "2" nodes will be played every other loop starting from the second pass. 
+      <br>
+      <h3>Drums</h3>
+      The top left block is the Drum sequencer. The bottom row of nodes are for the kick drum, the second is for the snare, and the top two rows are for the hi-hats (3rd row is closed hi-hats and top row is open hi-hats). 
+      <br>
+      <h3>Bass</h3>
+      The bottom left block is the Bass sequencer. The notes range from a low C note to another C, 1 octave above. 
+      <br>
+      <h3>Chords</h3>
+      The last sequencer is in the bottom right, and will play selected notes once per measure. The notes are also an octave, try to layer some notes to create chords! (If you are unfamiliar with scales, try activating 3 nodes in a column, with an empty node between each one to create a basic chord. you can move this shape around!)
+      <br>
+      <h4>Keyboard</h4> 
+      The keyboard is layed out using the 3 rows of keys you can see in the top right block. There are two octaves of notes between x and p, with every "C" note outlined in white. There are repeated notes to allow the user to move up and down the scale in multiple ways. It may take a little getting used to, but you can move up a scale by going right or by moving up the keyboard with 3 keys in each row. Generally speaking, moving towards the top right will be higher notes and moving to the bottom left is lower. 
+      <button> exit instructions</button>
+    </div>
 
 <main id="main-blocks">
    
