--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       </a>
       <button>instructions</button>
     </header>
-   
+    <!-- <canvas id="canvas1"></canvas>
+    <h1 id="canvas-title">4 Block Loop</h1> -->
     <div id="instructions">
       <h1>Instructions!</h1>
       
