--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
    </head>
 
   <body>
-    <header>
+    <!-- <header>
       <h1>4 Block Loop</h1>
-      <a href="https://github.com/Kernapillar">
-        <img id="social-link"  src="/github logo.png" alt="github link">
-      </a>
-      <button>instructions</button>
-    </header>
-    <!-- <canvas id="canvas1"></canvas>
-    <h1 id="canvas-title">4 Block Loop</h1> -->
+    </header> -->
+    <canvas id="canvas1"></canvas>
+    <h1 id="canvas-title">4 Block Loop</h1>
+    <button id="instructions-open">instructions</button>
+    <a href="https://github.com/Kernapillar">
+      <img id="social-link"  src="/githublogo.png" alt="github link">
+    </a>
     <div id="instructions">
       <h1>Instructions!</h1>
       
@@ -48,7 +48,7 @@
       <br>
       <h4>Keyboard</h4> 
       The keyboard is layed out using the 3 rows of keys you can see in the top right block. There are two octaves of notes between x and p, with every "C" note outlined in white. There are repeated notes to allow the user to move up and down the scale in multiple ways. It may take a little getting used to, but you can move up a scale by going right or by moving up the keyboard with 3 keys in each row. Generally speaking, moving towards the top right will be higher notes and moving to the bottom left is lower. 
-      <button> exit instructions</button>
+     
     </div>
 
 <main id="main-blocks">
