link picture in images folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 id="canvas-title">4 Block Loop</h1>
     <button id="instructions-open">instructions</button>
     <a href="https://github.com/Kernapillar">
-      <img id="social-link"  src="/githublogo.png" alt="github link">
+      <img id="social-link"  src=".images/githublogo.png" alt="github link">
     </a>
     <div id="instructions">
       <h1>Instructions!</h1>
