Linkedin link added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a href="https://github.com/Kernapillar">
       <img id="social-link"  src="./images/githublogo.png" alt="github link">
     </a>
+    <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
+      <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
+    </a>
     <div id="instructions">
       <h1>Instructions!</h1>
       
