Optional logo element

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
       <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
     </a>
+    <!-- <br>
+    <div class="logo">
+
+      <button class="logo-node yellow"></button>
+      <button class="logo-node orange"></button>
+      <button class="logo-node cyan"></button>
+      <button class="logo-node green"></button>
+
+    </div>
+    <br> -->
     <div id="instructions">
       <h1>Instructions!</h1>
       
