--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> 
+    <link rel="icon" href="images/four_block.png" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
@@ -15,14 +15,19 @@
   <body>
 
     <canvas id="canvas1"></canvas>
-    <h1 id="canvas-title">4 Block Loop</h1>
-    <button id="instructions-open">instructions</button>
-    <a href="https://github.com/Kernapillar">
-      <img id="social-link"  src="./images/githublogo.png" alt="github link">
-    </a>
-    <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
-      <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
-    </a>
+    <div class="canvas-overlay">
+      <button id="instructions-open">instructions</button>
+      <h1 id="canvas-title">4 Block Loop</h1>
+      <div class="social-links">
+        <a href="https://github.com/Kernapillar">
+          <img id="social-link"  src="./images/githublogo.png" alt="github link">
+        </a>
+        <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
+          <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
+        </a>
+
+      </div>
+    </div>
     <!-- <br>
     <div class="logo">
 
