links in new tab

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <h1 id="canvas-title">4 Block Loop</h1>
       <div class="social-links">
         <a href="https://github.com/Kernapillar">
-          <img id="social-link"  src="./images/githublogo.png" alt="github link">
+          <img id="social-link" target="_blank" src="./images/githublogo.png" alt="github link">
         </a>
         <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
-          <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
+          <img id="social-link2" target="_blank" src="./images/linkedin.png" alt="linkedin link">
         </a>
 
       </div>
