links open in new tab

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <button id="instructions-open">instructions</button>
       <h1 id="canvas-title">4 Block Loop</h1>
       <div class="social-links">
-        <a href="https://github.com/Kernapillar">
-          <img id="social-link" target="_blank" src="./images/githublogo.png" alt="github link">
+        <a href="https://github.com/Kernapillar" target="_blank">
+          <img id="social-link" src="./images/githublogo.png" alt="github link">
         </a>
-        <a href="https://www.linkedin.com/in/alex-kern-8978301b4/">
-          <img id="social-link2" target="_blank" src="./images/linkedin.png" alt="linkedin link">
+        <a href="https://www.linkedin.com/in/alex-kern-8978301b4/" target="_blank">
+          <img id="social-link2"  src="./images/linkedin.png" alt="linkedin link">
         </a>
 
       </div>
