seting up linkedin feature

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
     <title>4 Block Loop</title>
+    <meta property="og:title" content="4 Block Loop" />
+     <meta property="og:image" content="four_block_loop.jpg" />
+     <meta property="og:description" content="A music making notepad to create simple tunes and jam along with them."/>
+     <meta property="og:url" content="https://programmer.github.io/4-block-loop"/>
     
    </head>
 
