--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="4 Block Loop" />
      <meta property="og:image" content="four_block_loop.jpg" />
      <meta property="og:description" content="A music making notepad to create simple tunes and jam along with them."/>
-     <meta property="og:url" content="https://programmer.github.io/4-block-loop"/>
+     <meta property="og:url" content="https://kernapillar.github.io/4-block-loop"/>
     
    </head>
 
