--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>4 Block Loop</title>
     <meta property="og:title" content="4 Block Loop" />
      <meta property="og:image" content="four_block_loop.jpg" />
-     <meta property="og:description" content="A music making notepad to create simple tunes and jam along with them."/>
+     <meta property="og:description" content="A music making notepad to create simple tunes, jam along with them, with some visual representation of your music! "/>
      <meta property="og:url" content="https://kernapillar.github.io/4-block-loop"/>
     
    </head>
